--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview" />
     <hr />
     <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Conatct Me</a>
+    <a href="./public/contact.html">Contact Me</a>
 </body>
 
 </html>
